fixed the layout issue

--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -7,7 +7,7 @@
     padding: 10px;
     background-color: #051B34;
     color: #fff;
-    min-width:fit-content;
+    /* min-width:fit-content; */
   }
   
   .avatar-container {
